Prepare to fix scrollbar theming, limit characters per message to 2000, and add reconnection screen.

--- a/chat.css
+++ b/chat.css
@@ -186,38 +186,20 @@ ul {
   max-height: 144px;
 }
 
-#inputMessage::-webkit-scrollbar-track
+::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 	border-radius: 10px;
-	background-color: #F5F5F5;
+	background-color: #fff;
 }
-#inputMessage::-webkit-scrollbar
+::-webkit-scrollbar
 {
 	width: 12px;
-	background-color: #F5F5F5;
+  border-radius: 10px;
+	background-color: #fff;
 }
 
-#inputMessage::-webkit-scrollbar-thumb
-{
-	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	background-color: #555;
-}
-
-#messages::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	border-radius: 10px;
-	background-color: #F5F5F5;
-}
-#messages::-webkit-scrollbar
-{
-	width: 12px;
-	background-color: #F5F5F5;
-}
-
-#messages::-webkit-scrollbar-thumb
+::-webkit-scrollbar-thumb
 {
 	border-radius: 10px;
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -281,4 +263,27 @@ ul {
   align-items: center;
   padding: 10px 20px 10px 20px;
   font-size: 150%;
+}
+
+#reconnectingPage {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#reconnectingArea {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#reconnectingIcon {
+  width: 30%;
+  height: 30%;
 }
